# G-Watch

./: .dockerignore  .gitignore  .gitmodules  MANIFEST.in  README.md  dockerfile  requirements.txt  setup.py
assets/cuda/: meta.json
build_scripts/: _build_pybind11_json.sh  _build_sqlite.sh  _build_yamlcpp.sh  _common.py  _cuda.py  _install_grafana.sh  _install_nodejs.sh  build_with_meson.sh  commands.py  ext_libgwatch_binding.py  ext_libgwatch_capsule.py  ext_libgwatch_profiler.py  meson.build
build_scripts/deprected/: commands.py  ext_libgwatch_toolbox.py  install_headers.py
examples/: README.md
examples/cuda/binary/: parse_cubin.py
examples/cuda/profiler/: pc_sampling.py  profile_torch_model.py  range_profile.py
gwatch/: .gitignore  __init__.py
gwatch/cli/: main.py  profile.py
gwatch/cuda/: __init__.py
gwatch/cuda/assemble/: __init__.py  kernel.py  kernel_def_sass.py
gwatch/cuda/binary/: __init__.py
gwatch/cuda/profile/: __init__.py  context.py  profiler.py
include/gwatch/: binary.hpp  capsule.hpp  common.hpp
include/gwatch/cuda/: binary.hpp  kernel.hpp  profiler.hpp
scripts/: gwatch
scripts/docker/: run_cuda_12_8.sh  run_cuda_13_0.sh  run_pytorch.sh
src/binding/: capsule_instance.cpp  capture.cpp  internal_interface.hpp  runtime_control.hpp  trace_app.cpp  trace_task.cpp
src/binding/c/: binary.cpp  trace.cpp
src/binding/python/: interface.cpp
src/binding/runtime_control/: capsule_instance.cpp  kernel.cpp  trace_app.cpp  trace_task.cpp
src/capsule/: capsule.cpp  capsule.hpp  event.cpp  event.hpp  metric.hpp  topology.cpp  trace.cpp  trace.hpp  ws_callbacks.cpp
src/capsule/cuda_impl/: execution_control.cpp  module.cpp  trace.cpp  trace.hpp
src/common/: binary.cpp  binary.hpp  common.cpp  common.hpp  exporter.hpp  instrument.cpp  instrument.hpp  log.hpp  message.hpp
src/common/assemble/: instruction.cpp  instruction.hpp  instruction_def.cpp  (+11 more)
src/profiler/: context.cpp  context.hpp  device.cpp  device.hpp  metric.cpp  metric.hpp  profile_image.cpp  profile_image.hpp  profiler.cpp  profiler.hpp
src/profiler_main/: main.cpp
src/scheduler/: pybind.cpp  scheduler.cpp  scheduler.hpp
(+141 files in other folders)
